Fixed white space for question answers

--- a/src/components/Question.scss
+++ b/src/components/Question.scss
@@ -19,7 +19,7 @@
     p {
         margin-bottom: 0;
         color: white;
-        white-space: pre;
+        white-space: pre-wrap;
     }
 
     img {
